change same test data. Change colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,8 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  adminPrimary:  #8bc53f,
-  adminSecondary:  #668f2d
+  adminPrimary:  #b64b20,
+  adminSecondary:  #fdcf4e
 );
 
 
